--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -34,7 +34,8 @@ Executable eventsource-broker
     bson == 0.1.*,
     mongoDB == 1.1.*,
     time == 1.2.*,
-    SHA == 1.5.*
+    SHA == 1.5.*,
+    compact-string-fix == 0.3.*
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
