--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -39,6 +39,6 @@ Executable eventsource-broker
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
-                 -fno-warn-unused-do-bind
+                 -fno-warn-unused-do-bind -rtsopts
   else
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
