Suppport for IE6/7

--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -20,8 +20,8 @@ Executable eventsource-broker
     blaze-builder >= 0.3,
     MonadCatchIO-transformers >= 0.2.1 && < 0.3,
     mtl >= 2 && < 3,
-    snap-core == 0.5.*,
-    snap-server == 0.5.*,
+    snap-core == 0.5.5,
+    snap-server == 0.5.5,
     enumerator == 0.4.*,
     MissingH == 1.1.*,
     unix == 2.5.*,
