--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -20,17 +20,18 @@ Executable eventsource-broker
     blaze-builder >= 0.3,
     MonadCatchIO-transformers >= 0.2.1 && < 0.3,
     mtl >= 2 && < 3,
-    snap-core == 0.6.0.1,
-    snap-server == 0.6.0.1,
+    snap-core >= 0.6.0.1,
+    snap-server >= 0.6.0.1,
     enumerator == 0.4.*,
     MissingH == 1.1.*,
     unix == 2.5.*,
     uri == 0.1.*,
     amqp == 0.3.*,
     aeson == 0.3.*,
-    attoparsec == 0.9.*,
+    attoparsec >= 0.9.0,
     system-uuid == 2.1.*,
     HStringTemplate == 0.6.*,
+    hashmap >= 1.2,
     bson == 0.1.*,
     mongoDB == 1.1.*,
     time == 1.2.*,
