--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -36,7 +36,8 @@ Executable eventsource-broker
     mongoDB == 1.1.*,
     time == 1.2.*,
     SHA == 1.5.*,
-    compact-string-fix == 0.3.*
+    compact-string-fix == 0.3.*,
+    configurator >= 0.2.0.0
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
