Now setting up capped collections
All configuration now handled in config/app.cfg

--- a/config/app.cfg
+++ b/config/app.cfg
@@ -1,3 +1,10 @@
+broker
+{
+  # The full URL for the eventsource broker
+  # This is important for the cross domain requests
+  origin = "http://localhost:8000"
+}
+
 mongodb
 {
   host     = "localhost"
@@ -5,4 +12,22 @@ mongodb
   # database = "eventsourcehq"
   # user = "user"
   # pass = "password"
+}
+
+# Limits for capped collections
+caps
+{
+  # Limit for 10second and 1 minute stats in bytes
+  stats  = 1048576 # 1 MB
+  
+  # Limit for event buffer in bytes
+  buffer = 1048576 # 1 MB
+}
+
+amqp
+{
+  host     = "127.0.0.1"
+  user     = "guest"
+  pass     = "guest"
+  vhost    = "/"
 }
