Upgrade Mongo driver

--- a/config/app.cfg
+++ b/config/app.cfg
@@ -2,14 +2,15 @@ broker
 {
   # The full URL for the eventsource broker
   # This is important for the cross domain requests
-  origin = "http://localhost:8000"
+  # origin = "http://localhost:8000"
+  origin = "http://127.0.0.1:8000"
 }
 
 mongodb
 {
   host     = "localhost"
   port     = 27017
-  # database = "eventsourcehq"
+  database = "eventsourcehq"
   # user = "user"
   # pass = "password"
 }
@@ -26,7 +27,7 @@ caps
 
 amqp
 {
-  host     = "127.0.0.1"
+  hosts    = ["127.0.0.1"]
   user     = "guest"
   pass     = "guest"
   vhost    = "/"
