--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -18,10 +18,10 @@ Executable eventsource-broker
     base >= 4.3 && < 5,
     bytestring >= 0.9.1 && < 0.10,
     blaze-builder >= 0.3,
-    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
+    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl >= 2 && < 3,
-    snap-core >= 0.6.0.1,
-    snap-server >= 0.6.0.1,
+    snap-core == 0.9.*,
+    snap-server == 0.9.*,
     enumerator == 0.4.*,
     MissingH == 1.1.*,
     unix == 2.5.*,
@@ -31,10 +31,11 @@ Executable eventsource-broker
     attoparsec >= 0.9.0,
     system-uuid == 2.1.*,
     HStringTemplate == 0.6.*,
+    text >= 0.11.2.0,
     hashmap >= 1.2,
-    bson == 0.1.*,
-    mongoDB == 1.1.*,
-    time == 1.2.*,
+    bson >= 0.2.0,
+    mongoDB >= 1.3.0,
+    time >= 1.4,
     SHA == 1.5.*,
     compact-string-fix == 0.3.*,
     configurator >= 0.2.0.0
