--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -37,7 +37,7 @@ Executable eventsource-broker
     mongoDB >= 1.3.0,
     time >= 1.4,
     SHA == 1.5.*,
-    compact-string-fix == 0.3.*,
+    random >= 1.0.1.1,
     configurator >= 0.2.0.0
 
   if impl(ghc >= 6.12.0)
