--- a/eventsource-broker.cabal
+++ b/eventsource-broker.cabal
@@ -16,6 +16,7 @@ Executable eventsource-broker
 
   Build-depends:
     base >= 4.3 && < 5,
+    safe >= 0.3,
     bytestring >= 0.9.1 && < 0.10,
     blaze-builder >= 0.3,
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
